--- a/6b/.env
+++ b/6b/.env
@@ -1,1 +1,1 @@
-DB_KEY="mongodb+srv://sarthakbhangare7_db_user:gieYazTUhFNp7acw@cluster0.dqdhstv.mongodb.net/?appName=Cluster0"
+DB_KEY=DATABASE_KEY
